attempt to fix link alignment on Safari

--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -11,6 +11,7 @@
   justify-content: center;
   gap: 16px;
   margin-top: 50px;
+  width: 100%;
 }
 
 .footer__copy {
