--- a/styles/blocks/home.css
+++ b/styles/blocks/home.css
@@ -61,6 +61,7 @@
   display: flex;
   justify-content: center;
   gap: 16px;
+  width: 100%;
 }
 
 @media (max-width: 1320px) {
